# cloudpulse

./: .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/api/: routes.py  schemas.py
app/api/v2/: __init__.py  cost_reports.py  dashboard.py  dashboards.py  exports.py  folders.py  helpers.py  integrations.py  kubernetes.py  providers.py  query.py  reports.py  saved_filters.py  schemas.py  segments.py  teams.py  tokens.py  virtual_tags.py  webhooks.py  workspaces.py
app/core/: api_tokens.py  auth.py  config.py  database.py
app/models/: models.py  providers.py  v2.py
app/services/: ai_insights.py  alerts.py  anomaly_detector.py  azure_connector.py  commitment_analyzer.py  cost_drill_down.py  cost_explorer.py  cql_parser.py  cur_ingestor.py  duckdb_engine.py  focus_schema.py  gcp_connector.py  kubernetes_costs.py  local_cost_explorer.py  provider_registry.py  recommendations.py
app/services/connectors/: __init__.py  (+7 more)
docs/: NOTES.md  SELF_HOSTING.md
examples/: connect_provider.py  curl_examples.sh  docker-compose.production.yml  webhook_receiver.py
examples/terraform/: main.tf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: daily_digest.py  init_db.py  sync_local_account.py
sdk/python/: README.md  pyproject.toml
sdk/python/cloudpulse/: __init__.py  client.py
sdks/cloudpulse-go/: go.mod
sdks/cloudpulse-js/: package.json
sdks/cloudpulse-python/: README.md  pyproject.toml
sdks/cloudpulse-python/cloudpulse/: __init__.py  client.py  models.py
sdks/cloudpulse-python/examples/: quickstart.py
sdks/cloudpulse-ts/: package.json  tsconfig.json
static/: cloudpulse-iam-role.yaml
templates/: cloudpulse-iam-role.yaml  iam_policy.json  iam_trust_policy.json
terraform/terraform-cloudpulse-aws-integration/: main.tf
terraform/terraform-cloudpulse-databricks-integration/: main.tf
terraform/terraform-provider-cloudpulse/: main.go
tools/cloudpulse-helm-charts/: values.yaml
tools/cloudpulse-instances/: scraper.py
tools/handbook/: mkdocs.yml
(+44 files in other folders)
