[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudpulse-sdk"
version = "0.1.0"
description = "Python SDK for the CloudPulse cost management API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "CloudPulse Authors"}]
keywords = ["cloud", "cost", "finops", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://github.com/abhineetsood21/cloudpulse"
Documentation = "https://github.com/abhineetsood21/cloudpulse/tree/main/sdk/python"
