[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudpulse-sdk"
version = "0.1.0"
description = "Python SDK for the CloudPulse Cloud Cost Management API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CloudPulse", email = "sdk@cloudpulse.dev"},
]
keywords = ["cloud", "cost", "management", "aws", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/cloudpulse/cloudpulse-python"
Documentation = "https://docs.cloudpulse.dev/sdk/python"
Repository = "https://github.com/cloudpulse/cloudpulse-python"

[tool.setuptools.packages.find]
include = ["cloudpulse*"]
